[project]
name = "physionet-sleep-cognition"
version = "0.1.0"
description = "ML models predicting future cognitive impairment from polysomnogram recordings (PhysioNet/CinC Challenge 2026)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Samantha Goncalves", email = "sam.v.goncalves@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    # Deep learning core — torch on macOS ships with MPS support
    "torch>=2.5",
    "pytorch-lightning>=2.4",
    "transformers>=4.45",
    # PSG / EEG I/O
    "mne>=1.8",
    "mne-bids>=0.16",
    # Tabular / columnar
    "polars>=1.10",
    "duckdb>=1.1",
    "pyarrow>=18",
    # Config + logging
    "hydra-core>=1.3",
    "structlog>=24.4",
    # Classical ML baselines
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    # Data sourcing
    "kagglehub>=0.3",
    # Experiment tracking
    "wandb>=0.18",
    # Plotting (referenced from notebooks)
    "matplotlib>=3.9",
    "jupyterlab>=4.5.8",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "mypy>=1.13",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/physionet_cog"]

# --- Tooling ---

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "scripts", "tests"]
extend-exclude = ["data", "submissions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle / pyflakes
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "SIM",          # simplify
    "RUF",          # ruff-specific
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
files = ["src", "scripts"]

[[tool.mypy.overrides]]
module = ["mne.*", "mne_bids.*", "kagglehub.*", "wandb.*", "xgboost.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
